@@ -10,7 +10,7 @@ return array(
     'breadcrumbs.sql_bindings' => true,
 
     // Capture default user context
-    'user_context' => true,
+    'user_context' => false,
 
     'release' => '1.0',
 );
